--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,25 @@
+:root{
+  --black: #111517;
+  --white: white;
+  --background: #fafafa;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+margin:0;
+padding:0;
+outline:0;
+box-sizing:border-box;
 }
 
-code {
+html {
+  font-size: 16px;
+    /* background: url(./components/Home/images/3.jpg) no-repeat center center fixed;  */
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
