--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,24 +2,51 @@
   --black: #111517;
   --white: white;
   --background: #fafafa;
+  --black: white;
+  --white: #273542;;
+  --background: #1a2833;
+  --cardGray: #252b43;
+  --baseBackground: #1d2029;
+  --baseColor: white;
+  --gray: #8088ad;
+  --lightGray: #1d2029;
+  --cardTitle: #8088ad;
+  --switchSpinner: #282943;
+  --switch: linear-gradient(to right, #4796d2 0%, #37ce8f 100%);
 }
 body {
+  background: var(--background);
 margin:0;
 padding:0;
 outline:0;
 box-sizing:border-box;
 }
 
-html {
-  font-size: 16px;
-    /* background: url(./components/Home/images/3.jpg) no-repeat center center fixed;  */
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+.is-dark-mode {
+  --black: white;
+  --white: #273542;
+  --background: #1a2833;
 }
 
-/* code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
+.is-light-mode {
+  --black: #111517;
+  --white: white;
+  --background: #fafafa;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --black: white;
+    --white: #273542;;
+    --background: #1a2833;
+    --cardGray: #252b43;
+    --baseBackground: #1d2029;
+    --baseColor: white;
+    --gray: #8088ad;
+    --lightGray: #1d2029;
+    --cardTitle: #8088ad;
+    --switchSpinner: #282943;
+    --switch: linear-gradient(to right, #4796d2 0%, #37ce8f 100%);
+   
+  }
+}
